# kiwi

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
cmake/: FindGTest.cmake  GENERATED_KiwiCopts.cmake  KiwiCompilerUnix.cmake  KiwiConfigChecks.cmake  KiwiConfigureCopts.cmake  KiwiDll.cmake  KiwiHelpers.cmake  copts.py  generate_copts.py  kiwi-config.h.cmake
docs/html/: adapters_8hh_source.html  adapters__internal_8hh_source.html  adl_8hh_source.html  align_8hh_source.html  align__of_8hh_source.html  always__false_8hh_source.html  annotated.html  annotated_dup.js  ascii_8hh_source.html  assert_8hh_source.html  attributes_8hh_source.html  base__export_8hh_source.html  bit__cast_8hh_source.html  bits_8hh_source.html  build__config_8hh_source.html  build__flag_8hh_source.html  builtin_8hh_source.html  byte__order_8hh_source.html  checked__iterators_8hh_source.html  checked__math__impl_8hh_source.html  circular__deque_8hh_source.html  clamped__math_8hh_source.html  clamped__math__impl_8hh_source.html  class_r_w_spin_lock-members.html  class_r_w_spin_lock.html  class_r_w_spin_lock.js  classbase_1_1_file_path-members.html  classbase_1_1_file_path.html  classbase_1_1_live_ticks-members.html  classbase_1_1_live_ticks.html  classbase_1_1_thread_ticks-members.html  classbase_1_1_thread_ticks.html  classbase_1_1_time-members.html  classbase_1_1_time.html  classbase_1_1_time.js  classbase_1_1_time_delta-members.html  classbase_1_1_time_delta.html  classbase_1_1_time_ticks-members.html  classbase_1_1_time_ticks.html  classbase_1_1time__internal_1_1_time_base-members.html  (+969 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  concepts_0.js  (+49 more)
docs/latex/: adapters_8hh_source.tex  adapters__internal_8hh_source.tex  adl_8hh_source.tex  align_8hh_source.tex  align__of_8hh_source.tex  always__false_8hh_source.tex  annotated.tex  ascii_8hh_source.tex  assert_8hh_source.tex  attributes_8hh_source.tex  base__export_8hh_source.tex  bit__cast_8hh_source.tex  bits_8hh_source.tex  build__config_8hh_source.tex  build__flag_8hh_source.tex  builtin_8hh_source.tex  byte__order_8hh_source.tex  checked__iterators_8hh_source.tex  checked__math__impl_8hh_source.tex  circular__deque_8hh_source.tex  clamped__math_8hh_source.tex  clamped__math__impl_8hh_source.tex  class_r_w_spin_lock.tex  classbase_1_1_file_path.tex  classbase_1_1_live_ticks.tex  classbase_1_1_thread_ticks.tex  classbase_1_1_time.tex  classbase_1_1_time_delta.tex  classbase_1_1_time_ticks.tex  classbase_1_1time__internal_1_1_time_base.tex  classchibicpp_1_1_error_or.tex  classfolly_1_1_function.tex  classfolly_1_1_function_ref.tex  classfolly_1_1netops_1_1_msgheader.tex  classkiwi_1_1_big_endian.tex  classkiwi_1_1_checked_contiguous_iterator.tex  classkiwi_1_1_checked_numeric.tex  classkiwi_1_1_clamped_numeric.tex  classkiwi_1_1_compressed_pair.tex  classkiwi_1_1_compressed_pair_elem.tex  (+514 more)
include/kiwi/adt/: dense_map_info.hh
include/kiwi/apple/: foundation_util.hh  scoped_cftyperef.hh  scoped_typeref.hh
include/kiwi/base/: macros.hh
include/kiwi/chrono/: time.hh
include/kiwi/common/: align.hh  align_of.hh  bit_cast.hh  bits.hh  environment.hh  error_or.hh  exception.hh  fbstring.hh  function.hh  function_ref.hh  indestructible.hh  iterators.hh  macros.hh  malloc.hh  no_destructor.hh  scope_exit.hh  scoped_generic.hh  static_singleton_manager.hh  traits.hh  utility.hh
include/kiwi/compression/: compression.hh  compression_context_pool.hh
include/kiwi/concurrency/: cache_locality.hh  pthread.hh  thread_id.hh
include/kiwi/config/: build_flag.hh  (+1 more)
misc/cache/: README.md
misc/pthread/: README.md  pthread_atfork_demo.cc
src/: CMakeLists.txt
src/chrono/: CMakeLists.txt  time_conversion_posix.cc
src/common/: environment.cc
src/concurrency/: cache_locality.cc  thread_id.cc
src/files/: CMakeLists.txt  file.cc  file_path.cc  filepath.cc  safe_base_name.cc
src/io/: CMakeLists.txt  file.cc  file_enumerator.cc  file_enumerator_posix.cc  file_enumerator_win.cc  file_path.cc  file_posix.cc  file_tracing.cc  file_util.cc  file_util_apple.mm  file_util_posix.cc  iobuf.cc  safe_base_name.cc  scoped_file.cc  scoped_temp_file.cc  uio.cc
src/metrics/: CMakeLists.txt  crc32.cc
src/strings/: CMakeLists.txt  ascii.cc  strcat.cc  string_number_conversions.cc  string_split.cc  string_util.cc  string_util_constants.cc  sys_string_conversions_posix.cc  utf_ostream_operators.cc  utf_string_conversion_utils.cc  utf_string_conversions.cc
src/sys/: uio.cc  unistd.cc
test/: CMakeLists.txt
test/strings/: CMakeLists.txt
test/util/: CMakeLists.txt  pointers_test.cc
tests/: CMakeLists.txt
tests/apple/: scoped_cftyperef_test.cc
tests/common/: CMakeLists.txt  bit_cast_test.cc  bits_test.cc  environment_test.cc  function_test.cc  indestructible_test.cc  scoped_generic_test.cc  traits_test.cc
tests/containers/: CMakeLists.txt  adapters_test.cc  checked_iterators_test.cc  circular_deque_test.cc  contains_test.cc  flat_set_test.cc  flat_tree_test.cc  heap_array_test.cc  span_test.cc  to_vector_test.cc  vector_buffer_test.cc
tests/files/: CMakeLists.txt  file_path_test.cc
tests/include/: move_only_int.hh
tests/io/: scoped_temp_file_test.cc
tests/metrics/: CMakeLists.txt  crc32_test.cc
tests/strings/: CMakeLists.txt  ascii_test.cc  cstring_view_test.cc  utf_string_conversion_utils_test.cc
tests/synchronization/: lock_test.cc
tests/types/: CMakeLists.txt  pass_key_test.cc  supports_ostream_operator_test.cc  to_address_test.cc
tests/util/: checked_math_test.cc  no_destructor_test.cc
(+125 files in other folders)
